--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,5 +1,6 @@
 //vars
 $logo: url('../images/logo.png');
+$lede-img: url('../images/lede.jpg');
 $max-width: 1000px;
 $break_large: 1000px;
 $break_medium: 800px;
