--- a/index.hbs
+++ b/index.hbs
@@ -1,7 +1,7 @@
 {{!< default}}
 {{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
 
-<header class="m-lede" style="background-image: url('http://cl.ly/Zti9/cuba.jpg');">
+<header class="m-lede home">
   <div class="m-lede__inner">
     <a href="" class="m-lede__logo">8 Days in Cuba</a>
     <nav></nav>
