--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -172,15 +172,19 @@
   bottom: 0;
 }
 /* line 18, ../sass/modules/_m-lede.scss */
+.m-lede.home {
+  background-image: url("../images/lede.jpg");
+}
+/* line 21, ../sass/modules/_m-lede.scss */
 .m-lede h3 {
   font-size: 22px;
 }
-/* line 21, ../sass/modules/_m-lede.scss */
+/* line 24, ../sass/modules/_m-lede.scss */
 .m-lede .m-lede-author {
   font-weight: normal;
   color: white;
 }
-/* line 25, ../sass/modules/_m-lede.scss */
+/* line 28, ../sass/modules/_m-lede.scss */
 .m-lede .m-lede__inner {
   max-width: 1000px;
   min-height: 650px;
@@ -188,13 +192,13 @@
   margin: 0 auto;
 }
 @media (max-width: 800px) {
-  /* line 25, ../sass/modules/_m-lede.scss */
+  /* line 28, ../sass/modules/_m-lede.scss */
   .m-lede .m-lede__inner {
     min-height: 400px;
     padding: 275px 15px 15px;
   }
 }
-/* line 35, ../sass/modules/_m-lede.scss */
+/* line 38, ../sass/modules/_m-lede.scss */
 .m-lede .m-lede__featured {
   position: absolute;
   width: 100%;
@@ -203,7 +207,7 @@
   right: 0px;
 }
 @media (max-width: 800px) {
-  /* line 35, ../sass/modules/_m-lede.scss */
+  /* line 38, ../sass/modules/_m-lede.scss */
   .m-lede .m-lede__featured {
     position: relative;
     left: auto;
@@ -211,23 +215,23 @@
     bottom: auto;
   }
 }
-/* line 47, ../sass/modules/_m-lede.scss */
+/* line 50, ../sass/modules/_m-lede.scss */
 .m-lede .m-lede__featured a {
   color: white;
   text-decoration: none;
 }
-/* line 50, ../sass/modules/_m-lede.scss */
+/* line 53, ../sass/modules/_m-lede.scss */
 .m-lede .m-lede__featured a:hover {
   text-decoration: underline;
 }
-/* line 55, ../sass/modules/_m-lede.scss */
+/* line 58, ../sass/modules/_m-lede.scss */
 .m-lede .m-lede__main,
 .m-lede .m-lede__5 {
   position: absolute;
   bottom: 0;
 }
 @media (max-width: 800px) {
-  /* line 55, ../sass/modules/_m-lede.scss */
+  /* line 58, ../sass/modules/_m-lede.scss */
   .m-lede .m-lede__main,
   .m-lede .m-lede__5 {
     width: 100%;
@@ -236,29 +240,29 @@
   }
 }
 @media (min-width: 800px) {
-  /* line 65, ../sass/modules/_m-lede.scss */
+  /* line 68, ../sass/modules/_m-lede.scss */
   .m-lede .m-lede__main {
     width: calc(57% - 15px);
     left: 15px;
   }
 }
-/* line 71, ../sass/modules/_m-lede.scss */
+/* line 74, ../sass/modules/_m-lede.scss */
 .m-lede .m-lede__5 {
   color: white;
 }
-/* line 73, ../sass/modules/_m-lede.scss */
+/* line 76, ../sass/modules/_m-lede.scss */
 .m-lede .m-lede__5 ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
 }
-/* line 78, ../sass/modules/_m-lede.scss */
+/* line 81, ../sass/modules/_m-lede.scss */
 .m-lede .m-lede__5 li {
   list-style-type: none;
   margin-bottom: 15px;
   line-height: 1.4;
 }
-/* line 82, ../sass/modules/_m-lede.scss */
+/* line 85, ../sass/modules/_m-lede.scss */
 .m-lede .m-lede__5 li.eyebrow {
   background: white;
   color: #282828;
@@ -269,19 +273,19 @@
   font-size: 13px;
 }
 @media (min-width: 800px) {
-  /* line 78, ../sass/modules/_m-lede.scss */
+  /* line 81, ../sass/modules/_m-lede.scss */
   .m-lede .m-lede__5 li {
     font-size: 21px;
   }
 }
 @media (min-width: 800px) {
-  /* line 71, ../sass/modules/_m-lede.scss */
+  /* line 74, ../sass/modules/_m-lede.scss */
   .m-lede .m-lede__5 {
     width: calc(37% - 15px);
     right: 15px;
   }
 }
-/* line 100, ../sass/modules/_m-lede.scss */
+/* line 103, ../sass/modules/_m-lede.scss */
 .m-lede .m-lede__logo {
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
@@ -298,12 +302,12 @@
   top: 15px;
   left: 15px;
 }
-/* line 112, ../sass/modules/_m-lede.scss */
+/* line 115, ../sass/modules/_m-lede.scss */
 .m-lede .m-lede__logo:hover {
   opacity: 0.75;
 }
 @media (max-width: 800px) {
-  /* line 100, ../sass/modules/_m-lede.scss */
+  /* line 103, ../sass/modules/_m-lede.scss */
   .m-lede .m-lede__logo {
     width: 120px;
     height: 80px;
@@ -401,7 +405,7 @@
   font-size: 13px;
 }
 
-/* line 18, ../sass/style.scss */
+/* line 19, ../sass/style.scss */
 article, aside, details,
 figcaption, figure,
 footer, header, hgroup,
@@ -410,106 +414,106 @@ summary {
   display: block;
 }
 
-/* line 23, ../sass/style.scss */
+/* line 24, ../sass/style.scss */
 audio, canvas, video {
   display: inline-block;
 }
 
-/* line 24, ../sass/style.scss */
+/* line 25, ../sass/style.scss */
 audio:not([controls]) {
   display: none;
   height: 0;
 }
 
-/* line 25, ../sass/style.scss */
+/* line 26, ../sass/style.scss */
 [hidden], template {
   display: none;
 }
 
-/* line 26, ../sass/style.scss */
+/* line 27, ../sass/style.scss */
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
 
-/* line 31, ../sass/style.scss */
+/* line 32, ../sass/style.scss */
 body {
   margin: 0;
 }
 
-/* line 32, ../sass/style.scss */
+/* line 33, ../sass/style.scss */
 a {
   background: transparent;
 }
 
-/* line 33, ../sass/style.scss */
+/* line 34, ../sass/style.scss */
 a:focus {
   outline: thin dotted;
 }
 
-/* line 34, ../sass/style.scss */
+/* line 35, ../sass/style.scss */
 a:active, a:hover {
   outline: 0;
 }
 
-/* line 35, ../sass/style.scss */
+/* line 36, ../sass/style.scss */
 h1 {
   font-size: 2em;
   margin: 0.67em 0;
 }
 
-/* line 36, ../sass/style.scss */
+/* line 37, ../sass/style.scss */
 abbr[title] {
   border-bottom: 1px dotted;
 }
 
-/* line 37, ../sass/style.scss */
+/* line 38, ../sass/style.scss */
 b, strong {
   font-weight: 700;
 }
 
-/* line 38, ../sass/style.scss */
+/* line 39, ../sass/style.scss */
 dfn {
   font-style: italic;
 }
 
-/* line 39, ../sass/style.scss */
+/* line 40, ../sass/style.scss */
 hr {
   -moz-box-sizing: content-box;
   box-sizing: content-box;
   height: 0;
 }
 
-/* line 44, ../sass/style.scss */
+/* line 45, ../sass/style.scss */
 mark {
   background: #FF0;
   color: #000;
 }
 
-/* line 45, ../sass/style.scss */
+/* line 46, ../sass/style.scss */
 code, kbd, pre,
 samp {
   font-family: monospace, serif;
   font-size: 1em;
 }
 
-/* line 47, ../sass/style.scss */
+/* line 48, ../sass/style.scss */
 pre {
   white-space: pre-wrap;
 }
 
-/* line 48, ../sass/style.scss */
+/* line 49, ../sass/style.scss */
 q {
   quotes: "\201C" "\201D" "\2018" "\2019";
 }
 
-/* line 49, ../sass/style.scss */
+/* line 50, ../sass/style.scss */
 small {
   font-size: 80%;
 }
 
-/* line 50, ../sass/style.scss */
+/* line 51, ../sass/style.scss */
 sub, sup {
   font-size: 75%;
   line-height: 0;
@@ -517,45 +521,45 @@ sub, sup {
   vertical-align: baseline;
 }
 
-/* line 56, ../sass/style.scss */
+/* line 57, ../sass/style.scss */
 sup {
   top: -0.5em;
 }
 
-/* line 57, ../sass/style.scss */
+/* line 58, ../sass/style.scss */
 sub {
   bottom: -0.25em;
 }
 
-/* line 58, ../sass/style.scss */
+/* line 59, ../sass/style.scss */
 img {
   border: 0;
 }
 
-/* line 59, ../sass/style.scss */
+/* line 60, ../sass/style.scss */
 svg:not(:root) {
   overflow: hidden;
 }
 
-/* line 60, ../sass/style.scss */
+/* line 61, ../sass/style.scss */
 figure {
   margin: 0;
 }
 
-/* line 61, ../sass/style.scss */
+/* line 62, ../sass/style.scss */
 fieldset {
   border: 1px solid #c0c0c0;
   margin: 0 2px;
   padding: 0.35em 0.625em 0.75em;
 }
 
-/* line 66, ../sass/style.scss */
+/* line 67, ../sass/style.scss */
 legend {
   border: 0;
   padding: 0;
 }
 
-/* line 67, ../sass/style.scss */
+/* line 68, ../sass/style.scss */
 button, input, select,
 textarea {
   font-family: inherit;
@@ -563,36 +567,36 @@ textarea {
   margin: 0;
 }
 
-/* line 69, ../sass/style.scss */
+/* line 70, ../sass/style.scss */
 button, input {
   line-height: normal;
 }
 
-/* line 70, ../sass/style.scss */
+/* line 71, ../sass/style.scss */
 button, select {
   text-transform: none;
 }
 
-/* line 71, ../sass/style.scss */
+/* line 72, ../sass/style.scss */
 button, html input[type="button"],
 input[type="reset"], input[type="submit"] {
   -webkit-appearance: button;
   cursor: pointer;
 }
 
-/* line 76, ../sass/style.scss */
+/* line 77, ../sass/style.scss */
 button[disabled], html input[disabled] {
   cursor: default;
 }
 
-/* line 77, ../sass/style.scss */
+/* line 78, ../sass/style.scss */
 input[type="checkbox"],
 input[type="radio"] {
   box-sizing: border-box;
   padding: 0;
 }
 
-/* line 79, ../sass/style.scss */
+/* line 80, ../sass/style.scss */
 input[type="search"] {
   -webkit-appearance: textfield;
   -moz-box-sizing: content-box;
@@ -600,32 +604,32 @@ input[type="search"] {
   box-sizing: content-box;
 }
 
-/* line 85, ../sass/style.scss */
+/* line 86, ../sass/style.scss */
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
-/* line 87, ../sass/style.scss */
+/* line 88, ../sass/style.scss */
 button::-moz-focus-inner,
 input::-moz-focus-inner {
   border: 0;
   padding: 0;
 }
 
-/* line 89, ../sass/style.scss */
+/* line 90, ../sass/style.scss */
 textarea {
   overflow: auto;
   vertical-align: top;
 }
 
-/* line 90, ../sass/style.scss */
+/* line 91, ../sass/style.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 94, ../sass/style.scss */
+/* line 95, ../sass/style.scss */
 html {
   height: 100%;
   max-height: 100%;
@@ -633,7 +637,7 @@ html {
   -webkit-tap-highlight-color: transparent;
 }
 
-/* line 101, ../sass/style.scss */
+/* line 102, ../sass/style.scss */
 body {
   height: 100%;
   max-height: 100%;
@@ -647,17 +651,17 @@ body {
   -o-font-feature-settings: 'kern' 1;
 }
 
-/* line 114, ../sass/style.scss */
+/* line 115, ../sass/style.scss */
 ::-moz-selection {
   background: #D6EDFF;
 }
 
-/* line 118, ../sass/style.scss */
+/* line 119, ../sass/style.scss */
 ::selection {
   background: #D6EDFF;
 }
 
-/* line 122, ../sass/style.scss */
+/* line 123, ../sass/style.scss */
 h1, h2, h3,
 h4, h5, h6 {
   -webkit-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
@@ -669,24 +673,24 @@ h4, h5, h6 {
   font-family: "Open Sans", sans-serif;
 }
 
-/* line 134, ../sass/style.scss */
+/* line 135, ../sass/style.scss */
 h1 {
   font-size: 5rem;
   letter-spacing: -2px;
   text-indent: -3px;
 }
 @media (max-width: 800px) {
-  /* line 134, ../sass/style.scss */
+  /* line 135, ../sass/style.scss */
   h1 {
     font-size: 3.5rem;
   }
 }
 
-/* line 143, ../sass/style.scss */
+/* line 144, ../sass/style.scss */
 h2 {
   font-size: 2.6rem;
 }
-/* line 145, ../sass/style.scss */
+/* line 146, ../sass/style.scss */
 h2.m-blog-head, h2.m-gallery-head {
   font-size: 13px;
   background: #282828;
@@ -695,87 +699,87 @@ h2.m-blog-head, h2.m-gallery-head {
   font-weight: lighter;
   display: inline-block;
 }
-/* line 153, ../sass/style.scss */
+/* line 154, ../sass/style.scss */
 h2.m-blog-head a, h2.m-gallery-head a {
   color: white;
 }
-/* line 155, ../sass/style.scss */
+/* line 156, ../sass/style.scss */
 h2.m-blog-head a:hover, h2.m-gallery-head a:hover {
   text-decoration: none;
 }
 @media (max-width: 800px) {
-  /* line 143, ../sass/style.scss */
+  /* line 144, ../sass/style.scss */
   h2 {
     font-size: 2rem;
   }
 }
 
-/* line 165, ../sass/style.scss */
+/* line 166, ../sass/style.scss */
 h3 {
   font-size: 3rem;
 }
 
-/* line 169, ../sass/style.scss */
+/* line 170, ../sass/style.scss */
 h4 {
   font-size: 2.5rem;
 }
 
-/* line 173, ../sass/style.scss */
+/* line 174, ../sass/style.scss */
 h5 {
   font-size: 2rem;
 }
 
-/* line 177, ../sass/style.scss */
+/* line 178, ../sass/style.scss */
 h6 {
   font-size: 2rem;
 }
 
-/* line 181, ../sass/style.scss */
+/* line 182, ../sass/style.scss */
 img {
   max-width: 100%;
 }
 
-/* line 185, ../sass/style.scss */
+/* line 186, ../sass/style.scss */
 a {
   color: #282828;
   text-decoration: none;
 }
-/* line 188, ../sass/style.scss */
+/* line 189, ../sass/style.scss */
 a:hover {
   text-decoration: underline;
 }
 
-/* line 193, ../sass/style.scss */
+/* line 194, ../sass/style.scss */
 .eyebrow {
   text-transform: uppercase;
   font-size: 13px;
 }
 
-/* line 198, ../sass/style.scss */
+/* line 199, ../sass/style.scss */
 .site-footer {
   background: #282828;
   padding: 20px 15px;
   margin-top: 25px;
   color: white;
 }
-/* line 203, ../sass/style.scss */
+/* line 204, ../sass/style.scss */
 .site-footer a {
   color: white;
 }
-/* line 206, ../sass/style.scss */
+/* line 207, ../sass/style.scss */
 .site-footer section {
   font-size: 14px;
   max-width: 1000px;
   margin: 0 auto;
 }
 
-/* line 215, ../sass/style.scss */
+/* line 216, ../sass/style.scss */
 .gallery-head a,
 .post-head a {
   color: white;
 }
 
-/* line 220, ../sass/style.scss */
+/* line 221, ../sass/style.scss */
 .m-gallery-post-head,
 .m-blog-post-head {
   width: 100%;
@@ -783,7 +787,7 @@ a:hover {
   padding-bottom: 56.25%;
   position: relative;
 }
-/* line 226, ../sass/style.scss */
+/* line 227, ../sass/style.scss */
 .m-gallery-post-head .m-gallery-post-image,
 .m-gallery-post-head .m-blog-post-image,
 .m-blog-post-head .m-gallery-post-image,
@@ -798,7 +802,7 @@ a:hover {
   background-repeat: no-repeat;
 }
 
-/* line 239, ../sass/style.scss */
+/* line 240, ../sass/style.scss */
 footer.post-meta {
   font-size: 14px;
   line-height: 1;
